--- a/index.html
+++ b/index.html
@@ -4,118 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your best restaurant</title>
+    <title>Task 2.2 menu</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/reset.css" />
   </head>
   <body>
-    <div class="header-bg">
-      <header class="header">
-        <div class="container">
-          <div class="header-nav">
-            <div class="logo">
-              <img src="imgs/icons/Logo.png" alt="" />
-              <a href="#!">HEALTHY SWITCHER</a>
-            </div>
-            <nav class="nav">
-              <ul class="nav-list">
-                <li class="nav-item">
-                  <a class="active nav-link" href="#!">Menu</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#!">Recipes</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#!">Chefs</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#!">Contacts</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-        </div>
-      </header>
-      <div class="header-content container">
-        <div class="top-content">
-          <h1>
-            Your <b>Favorite Food</b><br />
-            Deliivered <b>Hot & Fresh</b>
-          </h1>
-          <h3>
-            HEALTHY SWITCHER chefs do all the prep work, like peeling, chopping
-            &<br />
-            marinating, so you can cook a fresh homemade dinner in just 15
-            minutes.
-          </h3>
-          <button class="btn-1">Order Now</button>
-        </div>
-        <div class="bottom-content">
-          <div class="link-item">
-            <img src="imgs/icons/clock.png" alt="" />
-            <p class="info">Today 10:00 am - 7:00 pm</p>
-            <p>Working hours</p>
-          </div>
-          <div class="link-item">
-            <img src="imgs/icons/navigation.png" alt="" />
-            <a
-              class="info"
-              target="_blank"
-              href="
-            https://yandex.ru/map-widget/v1/?um=constructor%3A33a0fe7ef6f9653df590e4298c6b43f2ba690d27acc1cc3a3116367c296879c1&amp;source=constructor"
-              >Minskoye Shosse 31</a
-            >
-            <p>Get Directions</p>
-          </div>
-          <div class="link-item">
-            <img src="imgs/icons/phone-call.png" alt="" />
-            <a class="info" href="tel: +375297778899">+375 (29) 777-88-99</a>
-            <p>Call Online</p>
-          </div>
-        </div>
+    <header>
+      <h1>Our Menu</h1>
+      <div class="menu-list">
+        <ul class="nav-menu">
+          <button data-num="1" class="btn">All</button>
+          <button data-num="2" class="btn">Breafast</button>
+          <button data-num="3" class="btn">Lunch</button>
+          <button data-num="4" class="btn">Shakes</button>
+          <button data-num="5" class="btn">Dinner</button>
+        </ul>
       </div>
-    </div>
-    <main class="main">
-      <div class="container">
-        <div class="first-page">
-          <div class="first-page-text">
-            <h2>ABOUT</h2>
-            <h3>The Basics Of Healthy Food</h3>
-            <h4>
-              In aliqua ea ullamco ad est ex non deserunt nulla. Consectetur
-              sint ea aliquip aliquip consectetur voluptate est. Eu minim dolore
-              laboris enim mollit voluptate irure esse aliquip.
-            </h4>
-          </div>
-          <div class="first-page-imgs">
-            <div class="slide-line">
-              <div class="slider">
-                <!-- <div class="all-slides"> -->
-                <div class="slide">
-                  <img src="imgs/first dish.png" alt="" />
-                  <img src="imgs/second dish.png" alt="" />
-                </div>
-                <div class="slide">
-                  <img src="imgs/second dish.png" alt="" />
-                  <img src="imgs/first dish.png" alt="" />
-                </div>
-                <!-- </div> -->
-                <div class="section-four-btns">
-                  <button class="slider-back slider-btn">
-                    <img src="imgs/icons/arrow-right (2).png" alt="" />
-                  </button>
-                  <button class="slider-next slider-btn">
-                    <img src="imgs/icons/arrow-right (2).png" alt="" />
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+    </header>
+    <main>
+      <div class="container"></div>
     </main>
-    <script src="js/script.js"></script>
+    <script src="script/script.js"></script>
   </body>
 </html>
-
-<iframe src="" width="350" height="250" frameborder="0"></iframe>
