--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="menu-list">
         <ul class="nav-menu">
           <button data-num="1" class="btn">All</button>
-          <button data-num="2" class="btn">Breafast</button>
+          <button data-num="2" class="btn">Breakfast</button>
           <button data-num="3" class="btn">Lunch</button>
           <button data-num="4" class="btn">Shakes</button>
           <button data-num="5" class="btn">Dinner</button>
