--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <main>
       <div class="container"></div>
     </main>
-    <script src="script/script.js"></script>
+    <script src="JS/script.js"></script>
   </body>
 </html>
